# BoxAutoLabel

./: .gitignore  common.py  inference.py  inference_server.py  pyproject.toml  train_cls.py
