[project]
name = "boxautolabel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "timm>=1.0.19",
    "Pillow>=9.0.0",
    "matplotlib>=3.5.0",
    "tensorboard>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
